--- a/src/app/html/pages/faq.hbs
+++ b/src/app/html/pages/faq.hbs
@@ -1,3 +1,5 @@
+{{!F.A.Q.}}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -24,7 +26,7 @@
                 <h2 class="faq-title">
                     FAQ's
                 </h2>
-                <a href="index.html" class="faq-header-link">
+                <a href='home.hbs' class="faq-header-link">
                     <svg class="faq-header-icon" width="14" height="14" viewBox="0 0 14 14"
                         xmlns="http://www.w3.org/2000/svg">
                         <title>Group 65</title>
@@ -127,16 +129,16 @@
 
             <ul class="faq-list">
                 <li class="faq-list-item">
-                    <a href="browse-sneakers.html" class="faq-list-link">Browse Sneakers</a>
+                    <a href='browse-sneakers.hbs' class="faq-list-link">Browse Sneakers</a>
                 </li>
                 <li class="faq-list-item">
-                    <a href="how-we-clean.html" class="faq-list-link">How We Clean</a>
+                    <a href='how-we-clean.hbs' class="faq-list-link">How We Clean</a>
                 </li>
                 <li class="faq-list-item">
-                    <a href="ways-to-rent.html" class="faq-list-link">Ways to Rent</a>
+                    <a href='ways-to-rent.hbs' class="faq-list-link">Ways to Rent</a>
                 </li>
                 <li class="faq-list-item">
-                    <a href="authenticity-guarantee.html" class="faq-list-link">Authenticity Guarantee</a>
+                    <a href='authenticity-guarantee.hbs' class="faq-list-link">Authenticity Guarantee</a>
                 </li>
             </ul>
 
