--- a/src/app/html/pages/lost-password.hbs
+++ b/src/app/html/pages/lost-password.hbs
@@ -1,3 +1,5 @@
+{{!Lost Password}}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -35,8 +37,8 @@
             </div>
 
             <button type="submit" class="infinite-button login-button lost-button">Get New Password</button>
-            <a class="form-text align-self-start" href="login.html">Log In</a>
-            <a class="form-text align-self-start" href="index.html">&#8592; Back to Infinite Selection</a>
+            <a class="form-text align-self-start" href='login.hbs'>Log In</a>
+            <a class="form-text align-self-start" href='home.hbs'>&#8592; Back to Infinite Selection</a>
         </form>
 
     </section>
