--- a/src/app/html/pages/search.hbs
+++ b/src/app/html/pages/search.hbs
@@ -1,3 +1,5 @@
+{{!Search}}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -22,7 +24,7 @@
   <div class="fixed-top bg-white">
     <nav class="navbar navbar-expand-lg  container">
       <a class="basket-icon d-flex d-lg-none"></a>
-      <a class="navbar-brand brand-logo" href="index.html"></a>
+      <a class="navbar-brand brand-logo" href='home.hbs'></a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
               data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
               aria-label="Toggle navigation">
@@ -32,25 +34,25 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav d-flex juctify-content-between">
           <li class="nav-item">
-            <a class="nav-link" href="browse-sneakers.html">Browse Sneakers</a>
+            <a class="nav-link" href='browse-sneakers.hbs'>Browse Sneakers</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="how-we-clean.html">How We Clean</a>
+            <a class="nav-link" href='how-we-clean.hbs'>How We Clean</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="ways-to-rent.html">Ways to Rent</a>
+            <a class="nav-link" href='ways-to-rent.hbs'>Ways to Rent</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="authenticity-guarantee.html">Authenticity
+            <a class="nav-link" href='authenticity-guarantee.hbs'>Authenticity
               Guarantee</a>
           </li>
         </ul>
       </div>
       <div class="authorization-layout d-none d-lg-flex">
-        <a class="nav-text" href="login.html">Login</a>
+        <a class="nav-text" href='login.hbs'>Login</a>
         <div class="searchbar">
           <input class="search_input" type="text" name="" placeholder="Search...">
-          <a href="search.html" class="search_icon"><i class="fas fa-search"></i></a>
+          <a href="search.hbs" class="search_icon"><i class="fas fa-search"></i></a>
         </div>
         <a class="basket-icon"></a>
       </div>
@@ -73,7 +75,7 @@
     <div class="row search-section">
       <div class="col-12 sneakers-browse-container">
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-1.jpg" alt="sneakers">
             <p class="releases-title">Nike Air 98</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -81,7 +83,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-2.jpg" alt="sneakers">
             <p class="releases-title">Adidas Yeezy 500</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -89,7 +91,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-3.jpg" alt="sneakers">
             <p class="releases-title">Adidas 300</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -97,7 +99,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-4.jpg" alt="sneakers">
             <p class="releases-title">Balenciaga</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -105,7 +107,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-5.jpg" alt="sneakers">
             <p class="releases-title">Adidas Yeezy 500</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -113,7 +115,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-6.jpg" alt="sneakers">
             <p class="releases-title">Adidas Yeezy 500</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -121,7 +123,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-7.png" alt="sneakers">
             <p class="releases-title">Nike GodFear</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -129,7 +131,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-8.png" alt="sneakers">
             <p class="releases-title">Puma Seventies</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -137,7 +139,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-9.png" alt="sneakers">
             <p class="releases-title">Adidas Yeezy 500</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -145,7 +147,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-10.png" alt="sneakers">
             <p class="releases-title">Puma Nineties</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -153,7 +155,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-11.png" alt="sneakers">
             <p class="releases-title">Adidas Yeezy 500</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -161,7 +163,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-12.png" alt="sneakers">
             <p class="releases-title">Balenciaga</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -169,7 +171,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-1.jpg" alt="sneakers">
             <p class="releases-title">Adidas Yeezy 500</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -177,7 +179,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-2.jpg" alt="sneakers">
             <p class="releases-title">Adidas Yeezy 500</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -185,7 +187,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-3.jpg" alt="sneakers">
             <p class="releases-title">Adidas Yeezy 500</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -193,7 +195,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-4.jpg" alt="sneakers">
             <p class="releases-title">Adidas Yeezy 500</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -201,7 +203,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-5.jpg" alt="sneakers">
             <p class="releases-title">Adidas Yeezy 500</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -209,7 +211,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-6.jpg" alt="sneakers">
             <p class="releases-title">Adidas Yeezy 500</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -217,7 +219,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-7.png" alt="sneakers">
             <p class="releases-title">Adidas Yeezy 500</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -225,7 +227,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-8.png" alt="sneakers">
             <p class="releases-title">Adidas Yeezy 500</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -233,7 +235,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-9.png" alt="sneakers">
             <p class="releases-title">Adidas Yeezy 500</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -241,7 +243,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-10.png" alt="sneakers">
             <p class="releases-title">Adidas Yeezy 500</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -249,7 +251,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-11.png" alt="sneakers">
             <p class="releases-title">Adidas Yeezy 500</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -257,7 +259,7 @@
           </a>
         </div>
         <div class="browse-item">
-          <a href="example.html" class="browse-item-link">
+          <a href='example.hbs' class="browse-item-link">
             <img class="browse-image" src="../assets/images/releases/releases-12.png" alt="sneakers">
             <p class="releases-title">Adidas Yeezy 500</p>
             <p class="releases-value">&#36;330 Value</p>
@@ -281,10 +283,10 @@
       </div>
       <div class="col-12 col-lg-5 footer-menu">
         <nav class="footer-nav">
-          <a class="footer-link" href="contact-us.html">Contact Us</a>
-          <a class="footer-link" href="terms-of-service.html">Terms of Services</a>
-          <a class="footer-link" href="privacy-policy.html">Privacy Policy</a>
-          <a class="footer-link" href="faq.html">FAQ</a>
+          <a class="footer-link" href='contact-us.hbs'>Contact Us</a>
+          <a class="footer-link" href='terms-of-service.hbs'>Terms of Services</a>
+          <a class="footer-link" href='privacy-policy.hbs'>Privacy Policy</a>
+          <a class="footer-link" href='faq.hbs'>FAQ</a>
         </nav>
       </div>
       <div class="col-12 col-lg footer-socials">
