--- a/src/app/html/pages/authenticity-guarantee.hbs
+++ b/src/app/html/pages/authenticity-guarantee.hbs
@@ -1,3 +1,5 @@
+{{!Authenticity Guarantee}}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Infinite Selection - LogIn Page</title>
+    <title>Infinite Selection - Authenticity Guarantee</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -21,7 +23,7 @@
         <div class="fixed-top bg-white">
             <nav class="navbar navbar-expand-lg  container">
                 <a class="basket-icon d-flex d-lg-none"></a>
-                <a class="navbar-brand brand-logo" href="index.html"></a>
+                <a class="navbar-brand brand-logo" href='home.hbs'></a>
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -29,26 +31,26 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav d-flex juctify-content-between">
-                        <li class="nav-item">
-                            <a class="nav-link" href="browse-sneakers.html">Browse Sneakers</a>
+                        <li class="nav-item ">
+                            <a class="nav-link" href='browse-sneakers.hbs'>Browse Sneakers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="how-we-clean.html">How We Clean</a>
+                            <a class="nav-link" href='how-we-clean.hbs'>How We Clean</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="ways-to-rent.html">Ways to Rent</a>
+                            <a class="nav-link" href='ways-to-rent.hbs'>Ways to Rent</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="authenticity-guarantee.html">Authenticity
+                            <a class="nav-link current-link" href="authenticity-guarantee.hbs">Authenticity
                                 Guarantee</a>
                         </li>
                     </ul>
                 </div>
                 <div class="authorization-layout d-none d-lg-flex">
-                    <a class="nav-text" href="login.html">Login</a>
+                    <a class="nav-text" href='login.hbs'>Login</a>
                     <div class="searchbar">
-                        <input class="search_input" type="text" name="" placeholder="Search..." required>
-                        <a href="search.html" class="search_icon"><i class="fas fa-search"></i></a>
+                        <input class="search_input" type="text" name="" placeholder="Search...">
+                        <a href='search.hbs' class="search_icon"><i class="fas fa-search"></i></a>
                     </div>
                     <a class="basket-icon"></a>
                 </div>
@@ -58,41 +60,46 @@
 
     <main class="main">
 
-        <section class="container login-layout">
-
-            <h2 class="infinite-title text-center ">Login</h2>
-            <form class="infinite-form infinite-form-validation" novalidate>
-                <a class="infinite-link-dark login-link" href="create-account.html">Create Account</a>
-                <div class="form-group">
-                    <input type="email" class="form-control form-field" id="exampleInputEmail1"
-                        aria-describedby="emailHelp" placeholder="E-mail" required>
-                    <small id="emailHelp" class="form-text text-grey">We'll never share your email with anyone
-                        else.</small>
-                    <div class="invalid-feedback">
-                        Please enter a valid Email address.
-                    </div>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
+        <section class="authenticity-container container">
+            <div class="row">
+                <div class="col-12 col-lg-8 col-xl-6 mx-auto">
+                    <h1 class="authenticity-title">
+                        Authenticity Guarantee
+                    </h1>
+                    <p class="authenticity-text">
+                        We know that verifying authenticity is a must for high-end footwear. When renting from Infinite
+                        Selection, you can feel 100% confident that the sneakers you receive are the real thing.
+                        Infinite Selection has developed a thorough authentication process to eliminate the possibility
+                        of you ever receiving fake sneakers from us.
+                    </p>
+                    <p class="authenticity-text">
+                        Here’s how we crack down on the fakes:
+                    </p>
+                    <p class="authenticity-text">
+                        <span class="text-dark-bold">Purchasing</span> – All of our sneakers are only initially
+                        purchased from legitimate retailers such as
+                        Footlocker, StockX, and Finish Line, who have their own verification processes and trusted
+                        distributors in place already.
+                    </p>
+                    <p class="authenticity-text">
+                        <span class="text-dark-bold">Authentication</span> – Even though we only buy from trusted
+                        retailers, we conduct our own in-depth
+                        review of every sneaker to confirm its authenticity before sending them to you. We are experts
+                        in identifying if sneakers are legit or not—down to the packaging it comes in. We check every
+                        sneaker’s construction detail, material, size, and colorway. Through this method, we ensure that
+                        every sneaker we send to you is authentic and you never have to worry about fake sneakers
+                        ruining your flex.
+                    </p>
                 </div>
-                <div class="form-group">
-                    <input type="password" class="form-control form-field" id="exampleInputPassword1"
-                        placeholder="Password" aria-describedby="passwordHelp" minlength="8" maxlength="20" required>
-                    <small id="passwordHelp" class="form-text text-grey">Your Password will'be carefuly saved, sleep
-                        well.</small>
-                    <div class="invalid-feedback">
-                        Your password must be 8-20 characters long,
-                        contain letters and numbers, and must not contain spaces, special characters, or emoji.
-                    </div>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
-                </div>
-                <button type="submit" class="infinite-button login-button">Login</button>
-                <a class="infinite-button login-button login-light-button" href="lost-password.html">I Forgot E-mail or
-                    Password</a>
-            </form>
+            </div>
+        </section>
 
+        <section class="action">
+            <h2 class="action-text">
+                Same Sneakers, Better Prices
+            </h2>
+            <a href='browse-sneakers.hbs' class="infinite-button action-link">Rent Now</a>
+            <img class="action-image" src="../assets/images/other/authenticity-action-image.png" alt="Just Do It">
         </section>
 
     </main>
@@ -107,10 +114,10 @@
                 </div>
                 <div class="col-12 col-lg-5 footer-menu">
                     <nav class="footer-nav">
-                        <a class="footer-link" href="contact-us.html">Contact Us</a>
-                        <a class="footer-link" href="terms-of-service.html">Terms of Services</a>
-                        <a class="footer-link" href="privacy-policy.html">Privacy Policy</a>
-                        <a class="footer-link" href="faq.html">FAQ</a>
+                        <a class="footer-link" href='faq.hbs'>Contact Us</a>
+                        <a class="footer-link" href='terms-of-service.hbs'>Terms of Services</a>
+                        <a class="footer-link" href='privacy-policy.hbs'>Privacy Policy</a>
+                        <a class="footer-link" href='contact-us.hbs'>FAQ</a>
                     </nav>
                 </div>
                 <div class="col-12 col-lg footer-socials">
@@ -136,7 +143,7 @@
         </div>
     </footer>
 
-    <!-- <script src="script/validation-form.js"></script> -->
+
     <!-- Bootstrap CSS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
@@ -150,7 +157,6 @@
     <!-- Font Awesome CSS -->
     <script src="scripts/fontawesome.min.js" defer></script>
     <!-- Custom JS -->
-    <script src="scripts/main.min.js"></script>
 </body>
 
 </html>
