--- a/src/app/html/pages/example.hbs
+++ b/src/app/html/pages/example.hbs
@@ -1,3 +1,5 @@
+{{!Sneakers Example}}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -21,7 +23,7 @@
         <div class="fixed-top bg-white">
             <nav class="navbar navbar-expand-lg  container">
                 <a class="basket-icon d-flex d-lg-none"></a>
-                <a class="navbar-brand brand-logo" href="index.html"></a>
+                <a class="navbar-brand brand-logo" href='home.hbs'></a>
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -31,25 +33,25 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav d-flex juctify-content-between">
                         <li class="nav-item">
-                            <a class="nav-link" href="browse-sneakers.html">Browse Sneakers</a>
+                            <a class="nav-link" href='browse-sneakers.hbs'>Browse Sneakers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="how-we-clean.html">How We Clean</a>
+                            <a class="nav-link" href='how-we-clean.hbs'>How We Clean</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="ways-to-rent.html">Ways to Rent</a>
+                            <a class="nav-link" href='ways-to-rent.hbs'>Ways to Rent</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="authenticity-guarantee.html">Authenticity
+                            <a class="nav-link" href='authenticity-guarantee.hbs'>Authenticity
                                 Guarantee</a>
                         </li>
                     </ul>
                 </div>
                 <div class="authorization-layout d-none d-lg-flex">
-                    <a class="nav-text" href="login.html">Login</a>
+                    <a class="nav-text" href='login.hbs'>Login</a>
                     <div class="searchbar">
                         <input class="search_input" type="text" name="" placeholder="Search...">
-                        <a href="search.html" class="search_icon"><i class="fas fa-search"></i></a>
+                        <a href='search.hbs' class="search_icon"><i class="fas fa-search"></i></a>
                     </div>
                     <a class="basket-icon"></a>
                 </div>
@@ -176,11 +178,11 @@
                 <h3 class="infinite-header">
                     You may also like
                 </h3>
-                <a class="infinite-link-dark" href="browse-sneakers.html">View All</a>
+                <a class="infinite-link-dark" href='browse-sneakers.hbs'>View All</a>
             </div>
             <div class="col-12 releases-container">
                 <div class="releases-item">
-                    <a href="example.html" class="releases-item-link">
+                    <a href="example.hbs" class="releases-item-link">
                         <img class="releases-image" src="../assets/images/releases/releases-7.png" alt="sneakers">
                         <p class="releases-title">Adidas Yeezy 500</p>
                         <p class="releases-value">&#36;330 Value</p>
@@ -188,7 +190,7 @@
                     </a>
                 </div>
                 <div class="releases-item">
-                    <a href="example.html" class="releases-item-link">
+                    <a href="example.hbs" class="releases-item-link">
                         <img class="releases-image" src="../assets/images/releases/releases-8.png" alt="sneakers">
                         <p class="releases-title">Adidas Yeezy 500</p>
                         <p class="releases-value">&#36;330 Value</p>
@@ -196,7 +198,7 @@
                     </a>
                 </div>
                 <div class="releases-item">
-                    <a href="example.html" class="releases-item-link">
+                    <a href="example.hbs" class="releases-item-link">
                         <img class="releases-image" src="../assets/images/releases/releases-9.png" alt="sneakers">
                         <p class="releases-title">Adidas Yeezy 500</p>
                         <p class="releases-value">&#36;330 Value</p>
@@ -204,7 +206,7 @@
                     </a>
                 </div>
                 <div class="releases-item">
-                    <a href="example.html" class="releases-item-link">
+                    <a href="example.hbs" class="releases-item-link">
                         <img class="releases-image" src="../assets/images/releases/releases-10.png" alt="sneakers">
                         <p class="releases-title">Adidas Yeezy 500</p>
                         <p class="releases-value">&#36;330 Value</p>
@@ -212,7 +214,7 @@
                     </a>
                 </div>
                 <div class="releases-item">
-                    <a href="example.html" class="releases-item-link">
+                    <a href="example.hbs" class="releases-item-link">
                         <img class="releases-image" src="../assets/images/releases/releases-11.png" alt="sneakers">
                         <p class="releases-title">Adidas Yeezy 500</p>
                         <p class="releases-value">&#36;330 Value</p>
@@ -220,7 +222,7 @@
                     </a>
                 </div>
                 <div class="releases-item">
-                    <a href="example.html" class="releases-item-link">
+                    <a href="example.hbs" class="releases-item-link">
                         <img class="releases-image" src="../assets/images/releases/releases-12.png" alt="sneakers">
                         <p class="releases-title">Adidas Yeezy 500</p>
                         <p class="releases-value">&#36;330 Value</p>
@@ -242,10 +244,10 @@
                 </div>
                 <div class="col-12 col-lg-5 footer-menu">
                     <nav class="footer-nav">
-                        <a class="footer-link" href="contact-us.html">Contact Us</a>
-                        <a class="footer-link" href="terms-of-service.html">Terms of Services</a>
-                        <a class="footer-link" href="privacy-policy.html">Privacy Policy</a>
-                        <a class="footer-link" href="faq.html">FAQ</a>
+                        <a class="footer-link" href='contact-us.hbs'>Contact Us</a>
+                        <a class="footer-link" href='terms-of-service.hbs'>Terms of Services</a>
+                        <a class="footer-link" href='privacy-policy.hbs'>Privacy Policy</a>
+                        <a class="footer-link" href='faq.hbs'>FAQ</a>
                     </nav>
                 </div>
                 <div class="col-12 col-lg footer-socials">
