--- a/src/app/html/pages/privacy-policy.hbs
+++ b/src/app/html/pages/privacy-policy.hbs
@@ -1,3 +1,5 @@
+{{!Privacy Policy}}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -21,7 +23,7 @@
         <div class="fixed-top bg-white">
             <nav class="navbar navbar-expand-lg  container">
                 <a class="basket-icon d-flex d-lg-none"></a>
-                <a class="navbar-brand brand-logo" href="index.html"></a>
+                <a class="navbar-brand brand-logo" href='home.hbs'></a>
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -30,25 +32,25 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav d-flex juctify-content-between">
                         <li class="nav-item ">
-                            <a class="nav-link" href="browse-sneakers.html">Browse Sneakers</a>
+                            <a class="nav-link" href='browse-sneakers.hbs'>Browse Sneakers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="how-we-clean.html">How We Clean</a>
+                            <a class="nav-link" href='how-we-clean.hbs'>How We Clean</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="ways-to-rent.html">Ways to Rent</a>
+                            <a class="nav-link" href='ways-to-rent.hbs'>Ways to Rent</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="authenticity-guarantee.html">Authenticity
+                            <a class="nav-link" href='authenticity-guarantee.hbs'>Authenticity
                                 Guarantee</a>
                         </li>
                     </ul>
                 </div>
                 <div class="authorization-layout d-none d-lg-flex">
-                    <a class="nav-text" href="login.html">Login</a>
+                    <a class="nav-text" href='login.hbs'>Login</a>
                     <div class="searchbar">
                         <input class="search_input" type="text" name="search" placeholder="Search...">
-                        <a href="search.html" class="search_icon"><i class="fas fa-search"></i></a>
+                        <a href='search.hbs' class="search_icon"><i class="fas fa-search"></i></a>
                     </div>
                     <a class="basket-icon"></a>
                 </div>
@@ -266,7 +268,7 @@
             <h2 class="action-text">
                 Same Sneakers, Better Prices
             </h2>
-            <a href="browse-sneakers.html" class="infinite-button action-link">Rent Now</a>
+            <a href='browse-sneakers.hbs' class="infinite-button action-link">Rent Now</a>
             <img class="action-image" src="../assets/images/other/sneakers-privact-policy.png" alt="Just Do It">
         </section>
 
@@ -282,9 +284,9 @@
                 </div>
                 <div class="col-12 col-lg-5 footer-menu">
                     <nav class="footer-nav">
-                        <a class="footer-link" href="contact-us.html">Contact Us</a>
-                        <a class="footer-link" href="terms-of-service.html">Terms of Services</a>
-                        <a class="footer-link" href="faq.html">FAQ</a>
+                        <a class="footer-link" href='contact-us.hbs'>Contact Us</a>
+                        <a class="footer-link" href='terms-of-service.hbs'>Terms of Services</a>
+                        <a class="footer-link" href='faq.hbs'>FAQ</a>
                     </nav>
                 </div>
                 <div class="col-12 col-lg footer-socials">
