--- a/src/app/html/pages/ways-to-rent.hbs
+++ b/src/app/html/pages/ways-to-rent.hbs
@@ -1,3 +1,5 @@
+{{!Ways to Rent}}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -22,7 +24,7 @@
         <div class="fixed-top bg-white">
             <nav class="navbar navbar-expand-lg  container">
                 <a class="basket-icon d-flex d-lg-none"></a>
-                <a class="navbar-brand brand-logo" href="index.html"></a>
+                <a class="navbar-brand brand-logo" href='home.hbs'></a>
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -32,25 +34,25 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav d-flex juctify-content-between">
                         <li class="nav-item">
-                            <a class="nav-link" href="browse-sneakers.html">Browse Sneakers</a>
+                            <a class="nav-link" href='browse-sneakers.hbs'>Browse Sneakers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="how-we-clean.html">How We Clean</a>
+                            <a class="nav-link" href='how-we-clean.hbs'>How We Clean</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link current-link" href="ways-to-rent.html">Ways to Rent</a>
+                            <a class="nav-link current-link" href="ways-to-rent.hbs">Ways to Rent</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="authenticity-guarantee.html">Authenticity
+                            <a class="nav-link" href='authenticity-guarantee.hbs'>Authenticity
                                 Guarantee</a>
                         </li>
                     </ul>
                 </div>
                 <div class="authorization-layout d-none d-lg-flex">
-                    <a class="nav-text" href="login.html">Login</a>
+                    <a class="nav-text" href='login.hbs'>Login</a>
                     <div class="searchbar">
                         <input class="search_input" type="text" name="" placeholder="Search...">
-                        <a href="search.html" class="search_icon"><i class="fas fa-search"></i></a>
+                        <a href='search.hbs' class="search_icon"><i class="fas fa-search"></i></a>
                     </div>
                     <a class="basket-icon"></a>
                 </div>
@@ -67,7 +69,7 @@
                 <p class="infinite-text rent-middle-text roboto">
                     Rent Any Pair Of Sneakers in Your Size For Free
                 </p>
-                <a href="browse-sneakers.html" class="infinite-button rent-banner-button">Try Now</a>
+                <a href='browse-sneakers.hbs' class="infinite-button rent-banner-button">Try Now</a>
             </div>
             <img src="../assets/images/rent/rent-right.png" alt="Rent Image" class="rent-image rent-image-right">
         </section>
@@ -141,13 +143,13 @@
                             <td class="table-dark-td">Pricing</td>
                             <td>
                                 <p class="text-dark-medium">Starting At &#36;30/Rental</p>
-                                <a href="browse-sneakers.html"
+                                <a href='browse-sneakers.hbs'
                                     class="infinite-button table-button button-white table-button-light">Browse
                                     Sneakers</a>
                             </td>
                             <td class=" ">
                                 <p class="text-dark-medium">&#36;249/Month</p>
-                                <a href="browse-sneakers.html" class="infinite-button table-button">Try Now</a>
+                                <a href='browse-sneakers.hbs' class="infinite-button table-button">Try Now</a>
                             </td>
                         </tr>
                     </tbody>
@@ -175,7 +177,7 @@
             </h3>
             <div class="col-12 releases-container">
                 <div class="releases-item">
-                    <a href="example.html" class="releases-item-link">
+                    <a href='example.hbs' class="releases-item-link">
                         <img class="releases-image" src="../assets/images/releases/releases-7.png" alt="sneakers">
                         <p class="releases-title">Adidas Yeezy 500</p>
                         <p class="releases-value">&#36;330 Value</p>
@@ -183,7 +185,7 @@
                     </a>
                 </div>
                 <div class="releases-item">
-                    <a href="example.html" class="releases-item-link">
+                    <a href='example.hbs' class="releases-item-link">
                         <img class="releases-image" src="../assets/images/releases/releases-8.png" alt="sneakers">
                         <p class="releases-title">Adidas Yeezy 500</p>
                         <p class="releases-value">&#36;330 Value</p>
@@ -191,7 +193,7 @@
                     </a>
                 </div>
                 <div class="releases-item">
-                    <a href="example.html" class="releases-item-link">
+                    <a href='example.hbs' class="releases-item-link">
                         <img class="releases-image" src="../assets/images/releases/releases-9.png" alt="sneakers">
                         <p class="releases-title">Adidas Yeezy 500</p>
                         <p class="releases-value">&#36;330 Value</p>
@@ -199,7 +201,7 @@
                     </a>
                 </div>
                 <div class="releases-item">
-                    <a href="example.html" class="releases-item-link">
+                    <a href='example.hbs' class="releases-item-link">
                         <img class="releases-image" src="../assets/images/releases/releases-10.png" alt="sneakers">
                         <p class="releases-title">Adidas Yeezy 500</p>
                         <p class="releases-value">&#36;330 Value</p>
@@ -207,7 +209,7 @@
                     </a>
                 </div>
                 <div class="releases-item">
-                    <a href="example.html" class="releases-item-link">
+                    <a href='example.hbs' class="releases-item-link">
                         <img class="releases-image" src="../assets/images/releases/releases-11.png" alt="sneakers">
                         <p class="releases-title">Adidas Yeezy 500</p>
                         <p class="releases-value">&#36;330 Value</p>
@@ -215,7 +217,7 @@
                     </a>
                 </div>
                 <div class="releases-item">
-                    <a href="example.html" class="releases-item-link">
+                    <a href='example.hbs' class="releases-item-link">
                         <img class="releases-image" src="../assets/images/releases/releases-12.png" alt="sneakers">
                         <p class="releases-title">Adidas Yeezy 500</p>
                         <p class="releases-value">&#36;330 Value</p>
@@ -223,7 +225,7 @@
                     </a>
                 </div>
             </div>
-            <a href="browse-sneakers.html" class="infinite-button action-link">Unlimited Rentals</a>
+            <a href='browse-sneakers.hbs' class="infinite-button action-link">Unlimited Rentals</a>
         </section>
 
         <section class="rent-action">
@@ -231,7 +233,7 @@
                 Afraid Of Commitment
                 <span class="infinite-text rent-middle-text roboto">Start With A One-Time Rental</span>
             </h2>
-            <a href="browse-sneakers.html" class="infinite-button action-link">Browse Sneakers</a>
+            <a href='browse-sneakers.hbs' class="infinite-button action-link">Browse Sneakers</a>
         </section>
 
     </main>
@@ -246,10 +248,10 @@
                 </div>
                 <div class="col-12 col-lg-5 footer-menu">
                     <nav class="footer-nav">
-                        <a class="footer-link" href="contact-us.html">Contact Us</a>
-                        <a class="footer-link" href="terms-of-service.html">Terms of Services</a>
-                        <a class="footer-link" href="privacy-policy.html">Privacy Policy</a>
-                        <a class="footer-link" href="faq.html">FAQ</a>
+                        <a class="footer-link" href='contact-us.hbs'>Contact Us</a>
+                        <a class="footer-link" href='terms-of-service.hbs'>Terms of Services</a>
+                        <a class="footer-link" href='privacy-policy.hbs'>Privacy Policy</a>
+                        <a class="footer-link" href='faq.hbs'>FAQ</a>
                     </nav>
                 </div>
                 <div class="col-12 col-lg footer-socials">
